...
    
    @IBAction func add(sender: AnyObject) {
        _viewModel.add()
    }
    
    @IBAction func reset(sender: AnyObject) {
        let alert = UIAlertController(title: "Reset counter", message: "Are you going to reset the counter?", preferredStyle: .Alert)
        alert.addAction(UIAlertAction(title: "Yes", style: .Default, handler: { [unowned self] (action) in
            self._viewModel.reset()
            }))
        alert.addAction(UIAlertAction(title: "No", style: .Cancel, handler: { (action) in
            print("Reset canceled")
        }))
        self.presentViewController(alert, animated: true) { 
...
