...
                                <rect key="frame" x="60" y="360" width="180" height="180"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="xJm-dj-3pg" secondAttribute="height" multiplier="1:1" id="CKc-cp-coj"/>
                                    <constraint firstAttribute="width" constant="150" id="ceW-w7-9R5"/>
                                    <constraint firstAttribute="height" constant="150" id="ydf-6Q-ICI"/>
                                </constraints>
                                <state key="normal" title="Reset"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="ceW-w7-9R5"/>
                                        <exclude reference="ydf-6Q-ICI"/>
                                    </mask>
                                </variation>
...
                                    <constraint firstAttribute="width" constant="50" id="7A5-HR-7h5"/>
                                    <constraint firstAttribute="width" constant="150" id="Bc4-sx-oWq"/>
                                    <constraint firstAttribute="width" secondItem="0d0-Dd-CFN" secondAttribute="height" multiplier="1:1" id="J6F-pT-Z0E"/>
                                    <constraint firstAttribute="height" constant="50" id="N7U-HU-hRs"/>
                                    <constraint firstAttribute="height" constant="150" id="u4R-OM-vy8"/>
                                </constraints>
                                <state key="normal" title="Add"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="7A5-HR-7h5"/>
                                        <exclude reference="Bc4-sx-oWq"/>
                                        <exclude reference="N7U-HU-hRs"/>
                                        <exclude reference="u4R-OM-vy8"/>
...
