//
//  TallyCounterUITests.swift
//  TallyCounterUITests
//
//  Created by Luis Wu on 3/24/16.
//  Copyright © 2016 Luis Wu. All rights reserved.
//

import XCTest
@testable import TallyCounter

class TallyCounterUITests: XCTestCase {
    let viewModel: MainViewModel = MainViewModel()
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        UserDefaultHelper.clearSettings()
        viewModel.reset()
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testAddBtn() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        let app = XCUIApplication()
        app.buttons["Reset"].tap()
        app.alerts["Reset counter"].collectionViews.buttons["Yes"].tap()
        XCTAssert(app.staticTexts["0"].exists)
        app.buttons["Add"].tap()
        app.staticTexts["1"].tap()
        XCTAssert(app.staticTexts["1"].exists)
    }
    
}
